fix(wastes): select entry movement detail by waste
